--- a/public/css/stylesCustom.css
+++ b/public/css/stylesCustom.css
@@ -196,10 +196,26 @@ body{
 }
 
 .circle-sm{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background-color: white;
     border-radius: 50%;
+    display: flex;
+}
+
+.ml{
+    margin-left: 8px;
+}
+
+.contimg{
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
+}
+
+.imgResize{
+    width: 100%;
+    height: 300px;
 }
 
 button > a:visited{
