--- a/public/css/stylesCustom.css
+++ b/public/css/stylesCustom.css
@@ -1094,3 +1094,38 @@ header h1 {
         display: none;
     }
 }
+
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 9999999;
+}
+
+.modal-contenido {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.cerrar {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+    background-color: black;
+    width: 40px;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+}
